--- a/styles.css
+++ b/styles.css
@@ -14,19 +14,41 @@ header {
 }
 
 body {
-    background-color: #FFB6C1;
+    /* background-color: #FFB6C1; */
 }
 
-p {
+.title {
     font-size: 1.5rem;
+}
+
+.landing {
+    display: flex;
+    align-items: center;
 }
 
 .logo {
     font-family: 'Lobster';
     font-size: 1.5rem;
     padding: 1rem;
+    margin-left: 2rem;
 }
 
+.brand {
+    font-family: 'Lobster';
+    font-size: 3rem;
+    color: #FFB6C1;
+}
+
+.all {
+    font-size: 3.5rem;
+    color: #FFB6C1;
+}
+
+.slogan {
+    margin-left: 3rem;
+    width: 25rem;
+    font-size: 2rem;
+}
 
 ul {
     display: flex;
@@ -48,6 +70,13 @@ ul li a:hover {
     text-underline-offset: .5rem;
 }
 
+.landingpage {
+    margin-top: 6rem;
+    margin-left: 3rem;
+    border-radius: 10%;
+    height: 40rem;
+}
+
 /* GRID DISPLAYING FLOWERS */
 .flowers-container {
     margin: 5rem;
@@ -62,8 +91,8 @@ ul li a:hover {
 
 
 .flower {
-    height: 500px;
-    width: 300px;
+    height: 40rem;
+    width: 18.75rem;
     border-radius: .5rem;
     text-align: center;
     background: rgba(255, 255, 255, 0.4);
@@ -77,4 +106,19 @@ ul li a:hover {
 .image {
     height: 300px;
     width: 250px;
+}
+
+.button {
+    border-radius: 1rem;
+    height: 2rem;
+    width: 6rem;
+    background-color: #fff;
+}
+
+.button:hover {
+    cursor: pointer;
+}
+
+p {
+    color: black;
 }
