--- a/styles.css
+++ b/styles.css
@@ -159,13 +159,22 @@ ul li a:hover {
 .contact-container {
     background-color: rgba(255, 255, 255, 0.6);
     border-radius: 2rem;
-    width: 70%;
+    width: 30%;
     height: 70%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-
-.contact-text {
+.contact-header {
+    margin-top: 2rem;
     font-size: 3rem;
-    color: #fff;
-    font-weight: bold;
+}
+
+.contact-form {
+    margin-top: 2rem;
+}
+
+.fname, .lname, .email {
+    margin-bottom: 3rem;
 }
