--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ ul li a:hover {
     text-decoration: underline;
     text-underline-offset: .5rem;
 }
-
+/* 24.375 */
 @media only screen and (max-width: 24.375rem) {
     .logo {
         display: none;
@@ -89,6 +89,25 @@ ul li a:hover {
     border-radius: 10%;
     height: auto;
     width: 60%;
+}
+
+@media only screen and (max-width: 24.375rem) {
+    #landing {
+        flex-direction: column;
+    }
+
+    #landing img {
+        width: 100%;
+        margin: 0;
+        border-radius: 0;
+        height: auto;
+    }
+
+    .slogan {
+        width: 90%;
+        margin: 0;
+        text-align: center;
+    }
 }
 
 /* GRID DISPLAYING FLOWERS */
